--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <meta property="og:title" content="Produção e Edição de Vídeos Personalizada | Shura">
   <meta property="og:description" content="Cada projeto é único e personalizado. Produção e edição de vídeos sob medida para marcas, criadores e empresas.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://siteshuraman.netlify.app">
-  <meta property="og:image" content="https://siteshuraman.netlify.app/preview.png">
+  <!-- TROQUE DEPOIS pelo link do seu GitHub Pages -->
+  <meta property="og:url" content="https://SEUUSUARIO.github.io/NOMEDOREPO/">
+  <meta property="og:image" content="https://SEUUSUARIO.github.io/NOMEDOREPO/preview.png">
 
-  <link rel="icon" href="/favicon.png">
+  <link rel="icon" href="favicon.png">
 
   <!-- GOOGLE FONT: LATO -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -88,14 +89,14 @@
 
       background-image: url("shura.png");
       background-repeat: no-repeat;
-      background-size: 165%;
-      background-position: 50% 50%;
+      background-size: 260%;
+      background-position: 68% 45%;
     }
 
     @media (max-width: 768px) {
       .hero-banner {
-        height: 300px;
-        font-size: 300px;
+        height: 96px;
+        font-size: 18px;
 
         background-size: 320%;
         background-position: 68% 48%;
@@ -157,19 +158,19 @@
       <div class="btn-group">
         <a class="btn-alt"
            href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%2Finstitucionais..."
-           target="_blank">
+           target="_blank" rel="noopener">
           Gravar e editar vídeo comercial/institucional
         </a>
 
         <a class="btn-alt"
            href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%2Finstitucionais..."
-           target="_blank">
+           target="_blank" rel="noopener">
           Editar vídeo comercial/institucional
         </a>
 
         <a class="btn-alt"
            href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%2Fou%20edi%C3%A7%C3%A3o%20de%20campanhas%20personalizadas..."
-           target="_blank">
+           target="_blank" rel="noopener">
           Gravar e/ou editar uma campanha
         </a>
       </div>
