--- a/index.html
+++ b/index.html
@@ -72,36 +72,40 @@
 
     /* BLOCO HERO (IMAGEM + TEXTO) */
     .hero-banner {
-      width: 520px;
-      max-width: 92vw;
-      height: 120px;
-      margin: 0 auto 26px auto;
+  width: 520px;
+  max-width: 92vw;
+  height: 120px;
+  margin: 0 auto 26px auto;
 
-      display: flex;
-      align-items: center;
+  display: flex;
+  align-items: center;
 
-      color: #000;
-      font-size: 22px;
-      font-weight: 900;
-      text-align: left;
-      padding-left: 32px;
-      padding-right: 32px;
+  color: #000;
+  font-size: 22px;
+  font-weight: 900;
+  text-align: left;
+  padding-left: 32px;
+  padding-right: 32px;
 
-      background-image: url("shura.png");
-      background-repeat: no-repeat;
-      background-size: 260%;
-      background-position: 68% 45%;
-    }
+  background-color: rgba(255,255,255,0.25);
+  border-radius: 18px;
 
-    @media (max-width: 768px) {
-      .hero-banner {
-        height: 96px;
-        font-size: 18px;
+  background-image: url("./shura.png");
+  background-repeat: no-repeat;
+  background-size: 260%;
+  background-position: 68% 45%;
+}
 
-        background-size: 320%;
-        background-position: 68% 48%;
-      }
-    }
+@media (max-width: 768px) {
+  .hero-banner {
+    height: 96px;
+    font-size: 18px;
+
+    background-size: 320%;
+    background-position: 68% 48%;
+  }
+}
+
 
     /* BOTÕES */
     .btn-group {
@@ -189,3 +193,4 @@
 
 </body>
 </html>
+
