--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       text-align: center;
     }
 
-    /* HERO (IMAGEM FUNDO + TEXTO) */
+    /* HERO: SOMENTE IMAGEM + TEXTO (SEM PÍLULA) */
     .hero-banner {
       width: 520px;
       max-width: 92vw;
@@ -85,15 +85,14 @@
       text-align: left;
       padding: 0 32px;
 
-      background-color: rgba(255,255,255,0.25);
-      border-radius: 18px;
-
       background-image: url("./shura.png");
       background-repeat: no-repeat;
-
-      /* ✅ enquadramento mais bonito */
       background-size: 170%;
       background-position: 78% 38%;
+
+      /* ✅ SEM FUNDO / SEM BORDA ARREDONDADA */
+      background-color: transparent;
+      border-radius: 0;
     }
 
     @media (max-width: 768px) {
@@ -182,7 +181,6 @@
     </div>
   </div>
 
-  <!-- SEO invisível -->
   <h1 style="position:absolute; left:-9999px;">
     Produção e edição de vídeos personalizada para marcas e projetos criativos
   </h1>
