--- a/index.html
+++ b/index.html
@@ -79,53 +79,72 @@
 }
 
 /* cabeça “solta” e bem grande */
-.hero-face{
-  position: absolute;
-  right: -10px;
-  top: -22px;
-
-  width: 190px;
-  height: 190px;
-
-  object-fit: cover;
-  object-position: 65% 30%; /* ajuste fino aqui */
-
-  pointer-events: none;
-  user-select: none;
+.hero-banner{
+  width: 520px;
+  max-width: 92vw;
+  height: 120px;
+  margin: 0 auto 26px auto;
+  position: relative;
 }
 
-/* texto por cima, sem caixa nenhuma */
+/* MÁSCARA CONTROLADA (corta a faixa branca do PNG) */
+.hero-face-wrap{
+  position: absolute;
+  right: -6px;
+  top: -22px;
+
+  width: 170px;
+  height: 170px;
+
+  overflow: hidden;       /* 🔥 aqui acontece o corte */
+  border-radius: 50%;     /* círculo limpo */
+  pointer-events: none;
+}
+
+.hero-face-wrap img{
+  width: 230px;           /* maior que o wrapper pra “cropar” */
+  height: auto;
+  position: absolute;
+  left: -30px;
+  top: -18px;
+}
+
+/* TEXTO LIMPO, SEM CAIXA */
 .hero-text{
   position: absolute;
   left: 0;
-  top: 34px;
+  top: 36px;
 
-  color: #000;
   font-size: 22px;
   font-weight: 900;
+  color: #000;
   line-height: 1.1;
   text-align: left;
 
-  padding-right: 150px; /* espaço pra cabeça não invadir */
+  padding-right: 150px; /* espaço pra cabeça */
 }
 
-/* mobile */
+/* MOBILE */
 @media (max-width: 768px){
   .hero-banner{
     height: 96px;
-    margin-bottom: 22px;
   }
 
-  .hero-face{
-    width: 150px;
-    height: 150px;
+  .hero-face-wrap{
+    width: 140px;
+    height: 140px;
     right: -8px;
     top: -18px;
-    object-position: 65% 20%;
+  }
+
+  .hero-face-wrap img{
+    width: 200px;
+    left: -28px;
+    top: -16px;
   }
 
   .hero-text{
-    top: 28px;
+    top: 30px;
     font-size: 18px;
     padding-right: 120px;
   }
@@ -181,9 +200,15 @@
     <div>
 
       <div class="hero-banner">
-  <img class="hero-face" src="./shura.png" alt="Shura" />
-  <div class="hero-text">Cada projeto é único e personalizado...</div>
+  <div class="hero-face-wrap">
+    <img src="./shura.png" alt="Shura" />
+  </div>
+
+  <div class="hero-text">
+    Cada projeto é único e personalizado...
+  </div>
 </div>
+
 
       <div class="btn-group">
         <a class="btn-alt"
@@ -218,6 +243,7 @@
 
 </body>
 </html>
+
 
 
 
