--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- GOOGLE FONT: LATO -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
   <style>
     * {
@@ -32,14 +32,14 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
+      background: #000;
     }
 
-    /* VIDEO FUNDO */
+    /* VÍDEO FUNDO */
     .bg {
       position: fixed;
       inset: 0;
       z-index: 0;
-      background: #000;
     }
 
     .bg iframe {
@@ -52,12 +52,12 @@
     .overlay {
       position: fixed;
       inset: 0;
-      background: rgba(255, 255, 255, 0.55);
+      background: rgba(255,255,255,0.55);
       z-index: 1;
       pointer-events: none;
     }
 
-    /* CONTEÚDO */
+    /* CONTEÚDO CENTRAL */
     .content {
       position: fixed;
       inset: 0;
@@ -66,99 +66,59 @@
       align-items: center;
       justify-content: center;
       padding: 24px;
-      text-align: center;
     }
 
-    /* HERO: SOMENTE IMAGEM + TEXTO (SEM PÍLULA) */
-    .hero-banner{
-  width: 520px;
-  max-width: 92vw;
-  height: 120px;
-  margin: 0 auto 26px auto;
-  position: relative;
-}
+    /* HERO */
+    .hero-banner {
+      width: 520px;
+      max-width: 92vw;
+      height: 140px;
+      position: relative;
+      margin-bottom: 28px;
+    }
 
-/* cabeça “solta” e bem grande */
-.hero-banner{
-  width: 520px;
-  max-width: 92vw;
-  height: 120px;
-  margin: 0 auto 26px auto;
-  position: relative;
-}
+    /* MÁSCARA DA CABEÇA */
+    .hero-face-wrap {
+      position: absolute;
+      right: -10px;
+      top: -28px;
+      width: 180px;
+      height: 180px;
+      overflow: hidden;
+      border-radius: 50%;
+      pointer-events: none;
+    }
 
-/* MÁSCARA CONTROLADA (corta a faixa branca do PNG) */
-.hero-face-wrap{
-  position: absolute;
-  right: -6px;
-  top: -22px;
+    .hero-face-wrap img {
+      position: absolute;
+      width: 240px;
+      left: -34px;
+      top: -22px;
+    }
 
-  width: 170px;
-  height: 170px;
-
-  overflow: hidden;       /* 🔥 aqui acontece o corte */
-  border-radius: 50%;     /* círculo limpo */
-  pointer-events: none;
-}
-
-.hero-face-wrap img{
-  width: 230px;           /* maior que o wrapper pra “cropar” */
-  height: auto;
-  position: absolute;
-  left: -30px;
-  top: -18px;
-}
-
-/* TEXTO LIMPO, SEM CAIXA */
-.hero-text{
-  position: absolute;
-  left: 0;
-  top: 36px;
-
-  font-size: 22px;
-  font-weight: 900;
-  color: #000;
-  line-height: 1.1;
-  text-align: left;
-
-  padding-right: 150px; /* espaço pra cabeça */
-}
-
-/* MOBILE */
-@media (max-width: 768px){
-  .hero-banner{
-    height: 96px;
-  }
-
-  .hero-face-wrap{
-    width: 140px;
-    height: 140px;
-    right: -8px;
-    top: -18px;
-  }
-
-  .hero-face-wrap img{
-    width: 200px;
-    left: -28px;
-    top: -16px;
-  }
-
-  .hero-text{
-    top: 30px;
-    font-size: 18px;
-    padding-right: 120px;
-  }
-}
-
+    /* TEXTO HERO */
+    .hero-text {
+      position: absolute;
+      left: 0;
+      top: 44px;
+      font-size: 22px;
+      font-weight: 900;
+      color: #000;
+      line-height: 1.15;
+      padding-right: 160px;
+    }
 
     /* BOTÕES */
     .btn-group {
       display: flex;
       flex-direction: column;
       gap: 14px;
+      align-items: center;
     }
 
     .btn-alt {
+      width: 520px;
+      max-width: 92vw;
       background: #25d366;
       color: #ffffff;
       text-decoration: none;
@@ -166,6 +126,7 @@
       border-radius: 999px;
       padding: 14px 26px;
       font-size: 16px;
+      text-align: center;
       box-shadow: 0 10px 22px rgba(0,0,0,0.35);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
@@ -175,7 +136,32 @@
       box-shadow: 0 14px 30px rgba(0,0,0,0.55);
     }
 
+    /* MOBILE */
     @media (max-width: 768px) {
+      .hero-banner {
+        height: 110px;
+        margin-bottom: 22px;
+      }
+
+      .hero-face-wrap {
+        width: 140px;
+        height: 140px;
+        right: -6px;
+        top: -22px;
+      }
+
+      .hero-face-wrap img {
+        width: 200px;
+        left: -28px;
+        top: -18px;
+      }
+
+      .hero-text {
+        top: 36px;
+        font-size: 18px;
+        padding-right: 120px;
+      }
+
       .btn-alt {
         font-size: 15px;
         padding: 13px 22px;
@@ -200,32 +186,30 @@
     <div>
 
       <div class="hero-banner">
-  <div class="hero-face-wrap">
-    <img src="./shura.png" alt="Shura" />
-  </div>
-
-  <div class="hero-text">
-    Cada projeto é único e personalizado...
-  </div>
-</div>
-
+        <div class="hero-face-wrap">
+          <img src="./shura.png" alt="Shura">
+        </div>
+        <div class="hero-text">
+          Cada projeto é único e personalizado...
+        </div>
+      </div>
 
       <div class="btn-group">
         <a class="btn-alt"
            href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%2Finstitucionais..."
-           target="_blank" rel="noopener">
+           target="_blank">
           Gravar e editar vídeo comercial/institucional
         </a>
 
         <a class="btn-alt"
            href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%2Finstitucionais..."
-           target="_blank" rel="noopener">
+           target="_blank">
           Editar vídeo comercial/institucional
         </a>
 
         <a class="btn-alt"
            href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%2Fou%20edi%C3%A7%C3%A3o%20de%20campanhas%20personalizadas..."
-           target="_blank" rel="noopener">
+           target="_blank">
           Gravar e/ou editar uma campanha
         </a>
       </div>
@@ -233,18 +217,5 @@
     </div>
   </div>
 
-  <h1 style="position:absolute; left:-9999px;">
-    Produção e edição de vídeos personalizada para marcas e projetos criativos
-  </h1>
-
-  <p style="position:absolute; left:-9999px;">
-    Criação e edição de vídeos sob medida para empresas, profissionais e marcas que buscam identidade visual forte, comunicação estratégica e conteúdo de impacto.
-  </p>
-
 </body>
 </html>
-
-
-
-
-
