--- a/index.html
+++ b/index.html
@@ -2,20 +2,10 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Produção e Edição de Vídeos Personalizada | Shura</title>
+  <title>Produção e Edição de Vídeos | Shura</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Produção e edição de vídeos personalizados para marcas e projetos únicos. Cada trabalho é pensado sob medida para comunicar, impactar e converter.">
 
-  <meta property="og:title" content="Produção e Edição de Vídeos Personalizada | Shura">
-  <meta property="og:description" content="Cada projeto é único e personalizado. Produção e edição de vídeos sob medida para marcas, criadores e empresas.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://marceloshura.github.io/meu-site/">
-  <meta property="og:image" content="https://marceloshura.github.io/meu-site/preview.png">
-
-  <link rel="icon" href="./favicon.png">
-
-  <!-- GOOGLE FONT: LATO -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
@@ -25,146 +15,53 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Lato', Arial, Helvetica, sans-serif;
+      font-family: 'Lato', sans-serif;
     }
 
-    html, body {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      background: #000;
-    }
-
-    /* VÍDEO FUNDO */
-    .bg {
-      position: fixed;
-      inset: 0;
-      z-index: 0;
-    }
-
-    .bg iframe {
-      width: 100%;
-      height: 100%;
-      border: 0;
-    }
-
-    /* OVERLAY */
-    .overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(255,255,255,0.55);
-      z-index: 1;
-      pointer-events: none;
-    }
-
-    /* CONTEÚDO CENTRAL */
-    .content {
-      position: fixed;
-      inset: 0;
-      z-index: 2;
+    body {
+      background: #8f8f8f;
+      height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 24px;
     }
 
-    /* HERO */
-    .hero-banner {
-      width: 520px;
-      max-width: 92vw;
-      height: 140px;
+    /* CONTAINER DO BANNER */
+    .hero {
       position: relative;
-      margin-bottom: 28px;
+      width: 90%;
+      max-width: 900px;
     }
 
-    /* MÁSCARA DA CABEÇA */
-    .hero-face-wrap {
-      position: absolute;
-      right: -10px;
-      top: -28px;
-      width: 180px;
-      height: 180px;
-      overflow: hidden;
-      border-radius: 50%;
-      pointer-events: none;
+    /* IMAGEM ORIGINAL (A ARTE) */
+    .hero img {
+      width: 100%;
+      height: auto;
+      display: block;
     }
 
-    .hero-face-wrap img {
-      position: absolute;
-      width: 240px;
-      left: -34px;
-      top: -22px;
-    }
-
-    /* TEXTO HERO */
+    /* TEXTO SOBRE A PÍLULA */
     .hero-text {
       position: absolute;
-      left: 0;
-      top: 44px;
-      font-size: 22px;
+
+      /* 🔧 AJUSTE FINO AQUI */
+      left: 12%;
+      top: 52%;
+
+      transform: translateY(-50%);
+
+      font-size: 24px;
       font-weight: 900;
       color: #000;
-      line-height: 1.15;
-      padding-right: 160px;
-    }
-
-    /* BOTÕES */
-    .btn-group {
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
-      align-items: center;
-    }
-
-    .btn-alt {
-      width: 520px;
-      max-width: 92vw;
-      background: #25d366;
-      color: #ffffff;
-      text-decoration: none;
-      font-weight: 700;
-      border-radius: 999px;
-      padding: 14px 26px;
-      font-size: 16px;
-      text-align: center;
-      box-shadow: 0 10px 22px rgba(0,0,0,0.35);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .btn-alt:hover {
-      transform: scale(1.04);
-      box-shadow: 0 14px 30px rgba(0,0,0,0.55);
+      white-space: nowrap;
     }
 
     /* MOBILE */
     @media (max-width: 768px) {
-      .hero-banner {
-        height: 110px;
-        margin-bottom: 22px;
-      }
-
-      .hero-face-wrap {
-        width: 140px;
-        height: 140px;
-        right: -6px;
-        top: -22px;
-      }
-
-      .hero-face-wrap img {
-        width: 200px;
-        left: -28px;
-        top: -18px;
-      }
-
       .hero-text {
-        top: 36px;
         font-size: 18px;
-        padding-right: 120px;
-      }
-
-      .btn-alt {
-        font-size: 15px;
-        padding: 13px 22px;
+        left: 10%;
+        top: 54%;
       }
     }
   </style>
@@ -172,48 +69,11 @@
 
 <body>
 
-  <div class="bg">
-    <iframe
-      src="https://player.vimeo.com/video/1150136711?background=1&autopause=0"
-      allow="autoplay; fullscreen; picture-in-picture"
-      allowfullscreen>
-    </iframe>
-  </div>
+  <div class="hero">
+    <img src="./shura.png" alt="Shura banner">
 
-  <div class="overlay"></div>
-
-  <div class="content">
-    <div>
-
-      <div class="hero-banner">
-        <div class="hero-face-wrap">
-          <img src="./shura.png" alt="Shura">
-        </div>
-        <div class="hero-text">
-          Cada projeto é único e personalizado...
-        </div>
-      </div>
-
-      <div class="btn-group">
-        <a class="btn-alt"
-           href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%2Finstitucionais..."
-           target="_blank">
-          Gravar e editar vídeo comercial/institucional
-        </a>
-
-        <a class="btn-alt"
-           href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%2Finstitucionais..."
-           target="_blank">
-          Editar vídeo comercial/institucional
-        </a>
-
-        <a class="btn-alt"
-           href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%2Fou%20edi%C3%A7%C3%A3o%20de%20campanhas%20personalizadas..."
-           target="_blank">
-          Gravar e/ou editar uma campanha
-        </a>
-      </div>
-
+    <div class="hero-text">
+      Cada projeto é único e personalizado...
     </div>
   </div>
 
