--- a/index.html
+++ b/index.html
@@ -2,66 +2,122 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Produção e Edição de Vídeos | Shura</title>
+  <title>Produção e Edição de Vídeos Personalizada | Shura</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Produção e edição de vídeos personalizados para marcas e projetos únicos. Cada trabalho é pensado sob medida para comunicar, impactar e converter.">
 
+  <meta property="og:title" content="Produção e Edição de Vídeos Personalizada | Shura">
+  <meta property="og:description" content="Cada projeto é único e personalizado. Produção e edição de vídeos sob medida para marcas, criadores e empresas.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://marceloshura.github.io/meu-site/">
+  <meta property="og:image" content="https://marceloshura.github.io/meu-site/preview.png">
+
+  <link rel="icon" href="./favicon.png">
+
+  <!-- LATO -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Lato', sans-serif;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Lato', Arial, Helvetica, sans-serif; }
+    html, body { width: 100%; height: 100%; overflow: hidden; }
 
-    body {
-      background: #8f8f8f;
-      height: 100vh;
+    /* FUNDO (VÍDEO) */
+    .bg { position: fixed; inset: 0; z-index: 0; background: #000; }
+    .bg iframe { width: 100%; height: 100%; border: 0; }
+
+    /* OVERLAY */
+    .overlay { position: fixed; inset: 0; background: rgba(255,255,255,0.55); z-index: 1; pointer-events: none; }
+
+    /* CONTEÚDO CENTRAL */
+    .content {
+      position: fixed;
+      inset: 0;
+      z-index: 2;
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: 24px;
+      text-align: center;
     }
 
-    /* CONTAINER DO BANNER */
+    /* WRAPPER */
+    .wrap {
+      width: 560px;
+      max-width: 92vw;
+    }
+
+    /* BANNER (IMAGEM) */
     .hero {
       position: relative;
-      width: 90%;
-      max-width: 900px;
+      width: 100%;
+      margin: 0 auto 18px auto;
     }
 
-    /* IMAGEM ORIGINAL (A ARTE) */
     .hero img {
       width: 100%;
       height: auto;
       display: block;
     }
 
-    /* TEXTO SOBRE A PÍLULA */
+    /* TEXTO EM CIMA DA PÍLULA (QUE JÁ EXISTE NA ARTE) */
     .hero-text {
       position: absolute;
 
-      /* 🔧 AJUSTE FINO AQUI */
-      left: 12%;
-      top: 52%;
+      /* ✅ Ajuste fino aqui (não mexe no resto) */
+      left: 14%;
+      top: 58%;
 
       transform: translateY(-50%);
-
-      font-size: 24px;
+      font-size: 22px;
       font-weight: 900;
       color: #000;
+      text-align: left;
       white-space: nowrap;
+    }
+
+    /* BOTÕES */
+    .btn-group {
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+      margin-top: 12px;
+    }
+
+    .btn-alt {
+      background: #25d366;
+      color: #ffffff;
+      text-decoration: none;
+      font-weight: 700;
+      border-radius: 999px;
+      padding: 14px 26px;
+      font-size: 16px;
+      box-shadow: 0 10px 22px rgba(0,0,0,0.35);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .btn-alt:hover {
+      transform: scale(1.04);
+      box-shadow: 0 14px 30px rgba(0,0,0,0.55);
     }
 
     /* MOBILE */
     @media (max-width: 768px) {
+      .wrap { width: 92vw; }
+
       .hero-text {
-        font-size: 18px;
-        left: 10%;
-        top: 54%;
+        font-size: 16px;
+        left: 12%;
+        top: 60%;
+        white-space: normal;
+        width: 62%;
+      }
+
+      .btn-alt {
+        font-size: 15px;
+        padding: 13px 22px;
       }
     }
   </style>
@@ -69,13 +125,4 @@
 
 <body>
 
-  <div class="hero">
-    <img src="./shura.png" alt="Shura banner">
-
-    <div class="hero-text">
-      Cada projeto é único e personalizado...
-    </div>
-  </div>
-
-</body>
-</html>
+  <div class="bg">
