--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Lato', sans-serif; }
-    html, body { width: 100%; height: 100%; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Lato', sans-serif;
+    }
+
+    html, body {
+      width: 100%;
+      height: 100%;
+    }
 
     /* FUNDO VÍDEO */
     .bg {
@@ -23,6 +32,7 @@
       z-index: 0;
       background: #000;
     }
+
     .bg iframe {
       width: 100%;
       height: 100%;
@@ -55,28 +65,29 @@
       text-align: center;
     }
 
-    /* BANNER ARTE */
+    /* BANNER */
     .hero {
       position: relative;
       width: 100%;
-      margin-bottom: 16px;
+      margin-bottom: 18px;
+      transform: scale(1.4); /* +40% */
+      transform-origin: center;
     }
+
     .hero img {
       width: 100%;
       height: auto;
       display: block;
     }
 
-    /* TEXTO NA PÍLULA (dentro da arte) */
+    /* TEXTO SOBRE A PÍLULA */
     .hero-text {
       position: absolute;
-
-      /* AJUSTE FINO */
-      left: 14%;
-      top: 58%;
-
+      left: calc(14% - 15px);   /* 15px para a esquerda */
+      top: calc(58% + 20px);    /* desce 20px */
       transform: translateY(-50%);
-      font-size: 22px;
+
+      font-size: 15px;          /* -30% aprox */
       font-weight: 900;
       color: #000;
       text-align: left;
@@ -88,20 +99,23 @@
       display: flex;
       flex-direction: column;
       gap: 14px;
-      margin-top: 10px;
+      margin-top: 22px;
     }
 
     .btn-alt {
       background: #25d366;
-      color: #fff;
+      color: #ffffff;
       text-decoration: none;
       font-weight: 700;
       border-radius: 999px;
-      padding: 14px 26px;
-      font-size: 16px;
+
+      padding: 14px 22px;      /* menos largura horizontal */
+      font-size: 17.5px;       /* +9% */
+
       box-shadow: 0 10px 22px rgba(0,0,0,0.35);
-      transition: transform .2s ease, box-shadow .2s ease;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
+
     .btn-alt:hover {
       transform: scale(1.04);
       box-shadow: 0 14px 30px rgba(0,0,0,0.55);
@@ -109,16 +123,21 @@
 
     /* MOBILE */
     @media (max-width: 768px) {
-      .hero-text {
-        font-size: 16px;
-        left: 12%;
-        top: 60%;
-        white-space: normal;
-        width: 62%;
+      .hero {
+        transform: scale(1.25);
       }
+
+      .hero-text {
+        font-size: 14px;
+        left: calc(12% - 15px);
+        top: calc(60% + 20px);
+        white-space: normal;
+        width: 65%;
+      }
+
       .btn-alt {
-        font-size: 15px;
-        padding: 13px 22px;
+        font-size: 16px;
+        padding: 13px 20px;
       }
     }
   </style>
@@ -126,7 +145,7 @@
 
 <body>
 
-  <!-- VÍDEO FUNDO (VIMEO) -->
+  <!-- VÍDEO FUNDO -->
   <div class="bg">
     <iframe
       src="https://player.vimeo.com/video/1150136711?background=1&autoplay=1&muted=1&loop=1&autopause=0"
@@ -142,7 +161,9 @@
 
       <div class="hero">
         <img src="./shura.png" alt="Shura banner">
-        <div class="hero-text">Cada projeto é único e personalizado...</div>
+        <div class="hero-text">
+          Cada projeto é único e personalizado...
+        </div>
       </div>
 
       <div class="btn-group">
