--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       position: relative;
       width: 100%;
       margin-bottom: 18px;
-      transform: scale(2.1); /* +40% */
+      transform: scale(2.8); /* +40% */
       transform-origin: center;
     }
 
@@ -83,8 +83,8 @@
     /* TEXTO SOBRE A PÍLULA */
     .hero-text {
       position: absolute;
-      left: calc(14% - 15px);   /* 15px para a esquerda */
-      top: calc(58% + 20px);    /* desce 20px */
+      left: calc(14% + 10px);   /* 15px para a esquerda */
+      top: calc(58% - 05px);    /* desce 20px */
       transform: translateY(-50%);
 
       font-size: 15px;          /* -30% aprox */
@@ -188,4 +188,5 @@
 
 </body>
 </html>
+
 
