--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
       gap: 14px;
       margin-top: 22px;
 
-      transform: translateX(-10px); /* 10px para a esquerda */
+      transform: translateX(- 15px); /* 10px para a esquerda */
+      transform: translateY(- 5px); /* 10px para a esquerda */
     }
 
     .btn-alt {
@@ -111,7 +112,7 @@
       font-weight: 700;
       border-radius: 999px;
 
-      padding: 14px 18px; /* mais estreito */
+      padding: 14px 16px; /* mais estreito */
       font-size: 17.5px;
 
       box-shadow: 0 10px 22px rgba(0,0,0,0.35);
@@ -131,8 +132,8 @@
 
       .hero-text {
         font-size: 8.5px;
-        left: calc(12% - 15px);
-        top: calc(60% + 20px);
+        left: calc(12% + 20px);
+        top: calc(60% + 15px);
         white-space: normal;
         width: 65%;
       }
@@ -194,3 +195,4 @@
 
 </body>
 </html>
+
