--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
       gap: 14px;
       margin-top: 22px;
 
-      transform: translateX(- 15px); /* 10px para a esquerda */
-      transform: translateY(- 5px); /* 10px para a esquerda */
+      transform: translateX(+ 25px); /* 10px para a esquerda */
+      transform: translateY(- 0px); /* 10px para a esquerda */
     }
 
     .btn-alt {
@@ -195,4 +195,5 @@
 
 </body>
 </html>
+
 
