--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       position: absolute;
       left: calc(14% + 10px);
       top: calc(58% - 5px);
+      transform: translateX(+50%);
       transform: translateY(-50%);
 
       font-size: 9.5px; /* -35% */
@@ -101,8 +102,8 @@
       gap: 14px;
       margin-top: 22px;
 
-      transform: translateX(+ 25px); /* 10px para a esquerda */
-      transform: translateY(- 0px); /* 10px para a esquerda */
+      transform: translateX(- 17px);
+      transform: translateY(- 0px); 
     }
 
     .btn-alt {
@@ -195,6 +196,7 @@
 
 </body>
 </html>
+
 
 
 
