--- a/index.html
+++ b/index.html
@@ -80,17 +80,15 @@
       display: block;
     }
 
-    /* TEXTO SOBRE A PÍLULA (ARTE) */
+    /* TEXTO SOBRE A PÍLULA */
     .hero-text {
       position: absolute;
       left: calc(14% + 55px);
       top: calc(58% - 10px);
       transform: translateY(-50%);
-
-      font-size: 9.5px; /* -35% */
+      font-size: 9.5px;
       font-weight: 900;
       color: #000;
-      text-align: left;
       white-space: nowrap;
     }
 
@@ -100,9 +98,7 @@
       flex-direction: column;
       gap: 14px;
       margin-top: 22px;
-
-      transform: translateX(- 17px);
-      transform: translateY(- 0px); 
+      transform: translate(-17px, 0px);
     }
 
     .btn-alt {
@@ -111,10 +107,8 @@
       text-decoration: none;
       font-weight: 700;
       border-radius: 999px;
-
-      padding: 14px 14px; /* mais estreito */
+      padding: 14px 14px;
       font-size: 17.5px;
-
       box-shadow: 0 10px 22px rgba(0,0,0,0.35);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
@@ -139,7 +133,7 @@
       }
 
       .btn-group {
-        transform: translateX(-6px);
+        transform: translate(-6px, 0px);
       }
 
       .btn-alt {
@@ -195,8 +189,3 @@
 
 </body>
 </html>
-
-
-
-
-
