--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     /* TEXTO SOBRE A PÍLULA */
     .hero-text {
       position: absolute;
-      left: calc(14% + 85px);
-      top: calc(58% - 1px);
+      left: calc(14% + 115px);
+      top: calc(58% + 25px);
       transform: translateY(-50%);
       font-size: 9.5px;
       font-weight: 900;
@@ -189,6 +189,7 @@
 
 </body>
 </html>
+
 
 
 
