--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
       position: absolute;
       left: calc(16% + 85px);
       top: calc(57% + 05px);
-      transform: translateY(-115%);
+      transform: translateX(-5%);
+      transform: translateY(-105%);
       font-size: 9.5px;
       font-weight: 900;
       color: #000;
@@ -189,6 +190,7 @@
 
 </body>
 </html>
+
 
 
 
