--- a/index.html
+++ b/index.html
@@ -82,15 +82,19 @@
 
     /* TEXTO SOBRE A PÍLULA */
     .hero-text {
-      position: absolute;
-      left: calc(16% + 85px);
-      top: calc(57% + 05px);
-      transform: translateY(-100%);
-      font-size: 9.5px;
-      font-weight: 900;
-      color: #000;
-      white-space: nowrap;
-    }
+  position: absolute;
+
+  left: calc(16% + 65px);  /* 20px mais para a esquerda */
+  top: calc(57% + 15px);   /* desce um pouco mais */
+
+  transform: translateY(-50%); /* centralização correta */
+
+  font-size: 9.5px;
+  font-weight: 900;
+  color: #000;
+  white-space: nowrap;
+}
+
 
     /* BOTÕES */
     .btn-group {
@@ -189,6 +193,7 @@
 
 </body>
 </html>
+
 
 
 
