--- a/index.html
+++ b/index.html
@@ -81,19 +81,18 @@
     }
 
     /* TEXTO SOBRE A PÍLULA */
-    .hero-text {
+   .hero-text {
   position: absolute;
-
-  left: calc(16% + 45px);  /* 20px mais para a esquerda */
-  top: calc(57% + 15px);   /* desce um pouco mais */
-
-  transform: translateY(-50%); /* centralização correta */
+  left: 16%;
+  top: 57%;
+  transform: translate(45px, -50%); /* X em px (controle fino) + centralização vertical */
 
   font-size: 9.5px;
   font-weight: 900;
   color: #000;
   white-space: nowrap;
 }
+
 
 
     /* BOTÕES */
@@ -193,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
