--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
   <title>Produção e Edição de Vídeos | Shura</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- SEO -->
+  <meta name="description" content="Produção e edição de vídeos personalizados para marcas, empresas e criadores. Cada projeto é único, pensado sob medida para comunicar, impactar e converter.">
+  <meta name="keywords" content="produção de vídeo, edição de vídeo, vídeos institucionais, vídeos comerciais, filmmaker, editor de vídeo, marketing audiovisual, vídeo personalizado, São Paulo">
+  <meta name="author" content="Shura">
+
+  <!-- OPEN GRAPH (WhatsApp / Instagram / Facebook) -->
+  <meta property="og:title" content="Produção e Edição de Vídeos | Shura">
+  <meta property="og:description" content="Cada projeto é único e personalizado. Produção e edição de vídeos sob medida para marcas e campanhas.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://marceloshura.github.io/meu-site/">
+  <meta property="og:image" content="https://marceloshura.github.io/meu-site/preview.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
   <link rel="icon" href="./favicon.png">
 
   <!-- LATO -->
@@ -81,19 +95,16 @@
     }
 
     /* TEXTO SOBRE A PÍLULA */
-   .hero-text {
-  position: absolute;
-  left: 16%;
-  top: 57%;
-  transform: translate(73px, -50%); /* X em px (controle fino) + centralização vertical */
-
-  font-size: 9.5px;
-  font-weight: 900;
-  color: #000;
-  white-space: nowrap;
-}
-
-
+    .hero-text {
+      position: absolute;
+      left: 16%;
+      top: 57%;
+      transform: translate(73px, -50%); /* X em px (controle fino) + centralização vertical */
+      font-size: 9.5px;
+      font-weight: 900;
+      color: #000;
+      white-space: nowrap;
+    }
 
     /* BOTÕES */
     .btn-group {
@@ -171,17 +182,17 @@
       </div>
 
       <div class="btn-group">
-        <a class="btn-alt" target="_blank"
+        <a class="btn-alt" target="_blank" rel="noopener"
           href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%2Finstitucionais...">
           Gravar e editar vídeo comercial/institucional
         </a>
 
-        <a class="btn-alt" target="_blank"
+        <a class="btn-alt" target="_blank" rel="noopener"
           href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%2Finstitucionais...">
           Editar vídeo comercial/institucional
         </a>
 
-        <a class="btn-alt" target="_blank"
+        <a class="btn-alt" target="_blank" rel="noopener"
           href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%2Fou%20edi%C3%A7%C3%A3o%20de%20campanhas%20personalizadas...">
           Gravar e/ou editar uma campanha
         </a>
@@ -190,23 +201,15 @@
     </div>
   </div>
 
+  <!-- SEO invisível (não aparece na tela) -->
+  <h1 style="position:absolute; left:-9999px;">
+    Produção e edição de vídeos personalizados para marcas e empresas
+  </h1>
+
+  <p style="position:absolute; left:-9999px;">
+    Criação de vídeos institucionais, comerciais e campanhas audiovisuais sob medida.
+    Atendimento personalizado, edição profissional e identidade visual forte.
+  </p>
+
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
